RecipeBookBackend/src/main/java/com/example/RecipeBook/errors/ItemNotFoundException.java
package com.example.RecipeBook.errors;

public class ItemNotFoundException extends RuntimeException {
    public ItemNotFoundException() {
        super("Item not found");
    }
}
